DHC Components/objects/Limits_Threshold__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting is used for check limits counts in the org.</description>
    <fields>
        <fullName>Async_Hard_Threshold__c</fullName>
        <label>Async Hard Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Async_Max_Limit__c</fullName>
        <label>Async Max Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Async_Soft_Threshold__c</fullName>
        <label>Async Soft Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hard_Threshold__c</fullName>
        <label>Hard Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Analysis__c</fullName>
        <label>Impact Analysis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_Type__c</fullName>
        <label>Limit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Limit__c</fullName>
        <label>Max Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <label>Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Hard_Threshold_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Hard Threshold Notification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Soft_Threshold_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Soft Threshold Notification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Threshold__c</fullName>
        <label>Soft Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Organization Limits Threshold Setup</label>
</CustomObject>